[package]
name = "balloon"
version = "0.1.0"
description = "a lightweight blog generator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
pulldown-cmark = "*"
hotwatch = "*"
tokio = { version = "*", features = ["full"] }
anyhow = "*"
walkdir = "*"
axum = "*"
tower-http = { version = "*", features = ["fs"] }
